# custom-prometheus-exporter

./: Dockerfile  README.md  myapp.yaml  prometheus-metrics-dashboard.json  pyproject.toml
app/: main.py
